# PS4-Eye-Driver

./: .gitignore  .gitmodules  CMakeLists.txt  CleanAll.bat  GenerateProjectFiles_Win32.bat  GenerateProjectFiles_X64.bat  InitialSetup_Win32.bat  InitialSetup_X64.bat
driver/include/: ps4eye.h
driver/src/: ps4eye.cpp
ewc_test/: CMakeLists.txt  PS4Camera.cpp  PS4Camera.h  main.cpp
opencv_test/: CMakeLists.txt  main.cpp
